# lifutils

./: .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  INSTALL  INSTALL.md  Makefile.am  NEWS  README.md  README.rst  autogen.sh  config.h.cmake  config.h.in  configure.ac  version.txt
debian/: changelog  control  copyright  rules
doc/: Makefile.am  copying.html  oldreleasenotes.html  readme.html  tutorial.html
doc/hardware/: Centronics-to-GPIO  HP41-PC-barcode-download  HP41-PC-parallel-download  HP41-PC-serial-transfer  HP71-PC-parallel-download  HP71-PC-serial-transfer  Makefile.am  barcode-schematic  barcode-test.c  barcode-wand-mods  barcode.asm  barcode.hex  barcode.lst  setrs.p41  setrs_hp71.txt
doc/html/: Makefile.am  barcode.html  barprt.html  barps.html  comp41.html  decomp41.html  er41rom.html  hx41rom.html  in71.html  inp41.html  key41.html  lexcat71.html  lexcat75.html  lifdir.html  lifdump.html  liffix.html  lifget.html  lifheader.html  lifilper.html  lifimage.html  lifinit.html  liflabel.html  lifmod.html  lifpack.html  lifpurge.html  lifput.html  lifraw.html  lifrename.html  lifstat.html  liftext.html  liftext75.html  lifutils.html  lifversion.html  out71.html  outp41.html  prog41bar.html  raw41lif.html  regs41.html  rom41.html  rom41cat.html  (+11 more)
legacy/: lifaddhdr.1  lifaddhdr.c  lifrmhdr.1  lifrmhdr.c
linux/: build_lifutils.sh  readme.txt
macos/: build_lifutils.sh  create_lifutils_removescript.sh  lifutils.xml  readme.txt
man/: Makefile.am  barcode.5  barprt.1  barps.1  comp41.1  decomp41.1  er41rom.1  hx41rom.1  in71.1  inp41.1  key41.1  lexcat71.1  lexcat75.1  lifdir.1  lifdump.1  liffix.1  lifget.1  lifheader.1  lifilper.1  lifimage.1  lifinit.1  liflabel.1  lifmod.1  lifpack.1  lifpurge.1  lifput.1  lifraw.1  lifrename.1  lifstat.1  liftext.1  liftext75.1  lifutils.1  lifversion.1  out71.1  outp41.1  prog41bar.1  raw41lif.1  regs41.1  rom41.1  rom41cat.1  (+11 more)
mingw/: build_lifutils.sh  mingw32.cmake  mingw64.cmake  readme.txt  run_nsis.sh
msi/: License.rtf  build_msi.cmd  package.wxl  package.wxs
nsis/: Configuration.nsh  InstallComponentFunctionDescription.nsh  InstallComponentSections.nsh  InstallFiles.nsh  Path.nsh  Setup.nsi  Uninstall.nsh  UninstallComponents.nsh  UninstallFiles.nsh  UninstallPages.nsh  Utils.nsh  lifutils.nsi
res/: lifutils.rc  lifutils.res
scripts/: Makefile.am  lifcopy  lifcopy.cmd  lifcopy.sh
scripts/linux/: barprt  barps  comp41  decomp41  er41rom  hx41rom  in71  inp41  key41  lexcat71  lexcat75  lifdir  liffix  lifget  lifheader  lifinit  liflabel  lifmod  lifpack  lifpurge  lifput  lifraw  lifrename  lifstat  liftext  liftext75  out71  outp41  prog41bar  raw41lif  regs41  rom41cat  rom41er  rom41hx  rom41lif  sdata  sdatabar  stat41  textlif  textlif75  (+2 more)
scripts/macos/: barprt  barps  comp41  decomp41  er41rom  hx41rom  in71  inp41  key41  lexcat71  lexcat75  lifdir  liffix  lifget  lifheader  lifinit  liflabel  lifmod  lifpack  lifpurge  lifput  lifraw  lifrename  lifstat  liftext  liftext75  out71  outp41  prog41bar  raw41lif  regs41  rom41cat  rom41er  rom41hx  rom41lif  sdata  sdatabar  stat41  textlif  textlif75  (+2 more)
scripts/windows/: barprt.cmd  barps.cmd  comp41.cmd  decomp41.cmd  er41rom.cmd  hx41rom.cmd  in71.cmd  inp41.cmd  key41.cmd  lexcat71.cmd  lexcat75.cmd  lifdir.cmd  liffix.cmd  lifget.cmd  lifheader.cmd  lifinit.cmd  liflabel.cmd  lifmod.cmd  lifpack.cmd  lifpurge.cmd  lifput.cmd  lifraw.cmd  lifrename.cmd  lifstat.cmd  liftext.cmd  liftext75.cmd  out71.cmd  outp41.cmd  prog41bar.cmd  raw41lif.cmd  regs41.cmd  rom41cat.cmd  rom41er.cmd  rom41hx.cmd  rom41lif.cmd  sdata.cmd  sdatabar.cmd  stat41.cmd  textlif.cmd  textlif75.cmd  (+2 more)
src/: Makefile.am  lifput.c
src/emu7470/: Makefile.am  chardraw.c  chardraw.h  charset0.h  charset1.h  charset2.h  charset3.h  charset4.h  charset7.h  emu7470.c  emu7470.h  lindef.c  lindef.h
src/lib/: Makefile.am  barprt.c  barps.c  comp41.c  comp41.h  decomp41.c  descramble_41.c  descramble_41.h  er41rom.c  getline.c  getline.h  getopt.h  hx41rom.c  ildisp.c  ildrive.c  in71.c  inp41.c  key41.c  lexcat71.c  lexcat75.c  lif_block.c  lif_block.h  lif_const.h  lif_create_entry.c  lif_create_entry.h  lif_dir_utils.c  lif_dir_utils.h  lif_img.c  lif_img.h  lif_img_win.c  lif_phy.h  lif_phy_dummy.c  lif_phy_linux.c  lifdir.c  liffix.c  lifget.c  lifheader.c  lifinit.c  liflabel.c  lifmod.c  (+33 more)
src/progs/: Makefile.am  barprt.c  barps.c  byte_key_tables41.h  byte_tables41.h  comp41.c  comp41.h  decomp41.c  er41rom.c  hp41_tables.h  hx41rom.c  in71.c  inp41.c  key41.c  lexcat71.c  lexcat75.c  lifdir.c  lifdump.c  liffix.c  lifget.c  lifheader.c  lifilper.c  lifimage.c  lifinit.c  liflabel.c  lifmod.c  lifpack.c  lifpurge.c  lifput.c  lifraw.c  lifrename.c  lifstat.c  liftext.c  liftext75.c  lifutils.c  lifversion.c  out71.c  outp41.c  prog41bar.c  ps_const.h  (+16 more)
test/: difftool.py  runtest.cmd  runtest.sh
test/basic/: audi2.txt  basic.cmd  basic.sh  data1.lif  key1.lif  memt.lex  prog41.txt  stat1.lif  wall1.lif
test/data/: VERM1.ROM  VERMROM.MOD  audi2.hex  audi2.txt  barprt.txt  dat1.lif  dat1.txt  dat1_extended.txt  dat1_hex.txt  err_long.txt  err_short.txt  key1.lif  key1.txt  key1_hex.txt  lexcat71.txt  lexcat75.txt  lifdir_after_fix.txt  lifdir_before_fix.txt  lifdir_liftest_empty.txt  lifdir_liftest_filled.txt  (+25 more)
tools/: makehtml.sh  makepdf.sh  mingw.sh
windows/: SelectScopeDlg.wxs  WixUI_InstallDirMod.wxs  WixUI_InstallDirSelectScope.wxs  build_lifutils.cmd  build_msi.cmd  cleanup.cmd  components.wxs  lifutils.wxi  lifutils.wxs  package.wxi  readme.txt  run_nsis.cmd
xroms/: Makefile.am  advantage.xrom  alpha.xrom  aviation.xrom  cardrdr.xrom  ccd.xrom  circuits.xrom  clinical.xrom  dataacq.xrom  devil.xrom  finance.xrom  games.xrom  hepax.xrom  homemgmt.xrom  hpdevices.xrom  hpil.xrom  machine.xrom  math.xrom  melrom.xrom  navigation.xrom  petroleum.xrom  plotter.xrom  ppc.xrom  printer.xrom  realestate.xrom  standard.xrom  statistics.xrom  stress.xrom  struct.xrom  surveying.xrom  thermal.xrom  time.xrom  timecx.xrom  wand.xrom  xfn.xrom  xfncx.xrom  xio.xrom
(+8 files in other folders)
