man_MANS= barcode.5 barprt.1 barps.1 comp41.1 decomp41.1 in71.1 inp41.1 key41.1 lifdir.1 lifdump.1 liffix.1 lifget.1 lifilper.1 lifimage.1 lifinit.1 liflabel.1 lifpack.1 lifpurge.1 lifput.1 lifraw.1 lifrename.1 lifstat.1 liftext.1 out71.1 outp41.1 prog41bar.1 raw41lif.1 regs41.1 rom41.1 rom41cat.1 rom41hx.1 sdata.1 sdatabar.1 stat41.1 text75.1 textlif.1 wall41.1 wcat41.1 lifmod.1
