hardwaredir=$(docdir)/hardware
hardware_DATA= barcode.asm barcode.hex barcode.lst barcode-schematic barcode-test.c barcode-wand-mods Centronics-to-GPIO HP41-PC-barcode-download HP41-PC-parallel-download HP41-PC-serial-transfer HP71-PC-parallel-download HP71-PC-serial-transfer Makefile.am setrs_hp71.txt setrs.p41
