htmldocdir=$(docdir)/html
htmldoc_DATA=barcode.html barprt.html barps.html comp41.html decomp41.html in71.html inp41.html key41.html lifdir.html lifdump.html liffix.html lifget.html lifilper.html lifimage.html lifinit.html liflabel.html lifpack.html lifpurge.html lifput.html lifraw.html lifrename.html lifstat.html liftext.html Makefile.am out71.html outp41.html prog41bar.html raw41lif.html regs41.html rom41cat.html rom41.html rom41hx.html sdatabar.html sdata.html stat41.html text75.html textlif.html wall41.html wcat41.html lifmod.html lexcat71.html
