AM_CFLAGS= -I../lib
bin_PROGRAMS= lifdir lifget lifpurge liflabel lifrename \
     liftext sdata decomp41 text75 regs41 stat41 key41 \
     wall41 wcat41 lifstat sdatabar comp41 \
     barprt barps rom41 rom41cat prog41bar lifput textlif \
     raw41lif lifraw rom41hx lifinit lifpack liffix lifmod lexcat71  \
     hx41rom lifheader lifversion
if MACOSX
bin_PROGRAMS+= in71 out71 lifilper inp41 outp41
endif
if LINUX
bin_PROGRAMS+= in71 out71 lifilper inp41 outp41 lifimage lifdump
endif
lifimage_SOURCES= lifimage.c 
lifimage_LDADD= ../lib/liblifutils.a
lifdump_SOURCES= lifdump.c 
lifdump_LDADD= ../lib/liblifutils.a
lifdir_SOURCES= lifdir.c 
lifdir_LDADD= ../lib/liblifutils.a
lifget_SOURCES= lifget.c 
lifget_LDADD= ../lib/liblifutils.a
lifrename_SOURCES= lifrename.c 
lifrename_LDADD= ../lib/liblifutils.a
lifpurge_SOURCES= lifpurge.c 
lifpurge_LDADD= ../lib/liblifutils.a
liflabel_SOURCES= liflabel.c 
liflabel_LDADD= ../lib/liblifutils.a
liftext_SOURCES= liftext.c 
sdata_SOURCES= sdata.c 
sdata_LDADD= ../lib/liblifutils.a
comp41_SOURCES= comp41.c
comp41_LDADD= ../lib/liblifutils.a
decomp41_SOURCES= decomp41.c
decomp41_LDADD= ../lib/liblifutils.a
text75_SOURCES= text75.c
regs41_SOURCES= regs41.c 
regs41_LDADD= ../lib/liblifutils.a
stat41_SOURCES= stat41.c 
stat41_LDADD= ../lib/liblifutils.a
key41_SOURCES= key41.c 
key41_LDADD= ../lib/liblifutils.a
outp41_SOURCES= outp41.c 
inp41_SOURCES= inp41.c 
wall41_SOURCES= wall41.c 
wall41_LDADD= ../lib/liblifutils.a
wcat41_SOURCES= wcat41.c 
wcat41_LDADD= ../lib/liblifutils.a
in71_SOURCES= in71.c 
in71_LDADD= ../lib/liblifutils.a
out71_SOURCES= out71.c 
out71_LDADD= ../lib/liblifutils.a
lifstat_SOURCES= lifstat.c 
lifstat_LDADD= ../lib/liblifutils.a
sdatabar_SOURCES= sdatabar.c 
sdatabar_LDADD= ../lib/liblifutils.a
barprt_SOURCES= barprt.c 
barprt_LDADD= ../lib/liblifutils.a
barps_SOURCES= barps.c 
barps_LDADD= ../lib/liblifutils.a
prog41bar_SOURCES= prog41bar.c 
prog41bar_LDADD= ../lib/liblifutils.a
rom41_SOURCES= rom41.c 
rom41_LDADD= ../lib/liblifutils.a
rom41cat_SOURCES= rom41cat.c 
rom41cat_LDADD= ../lib/liblifutils.a
rom41hx_SOURCES= rom41hx.c 
rom41hx_LDADD= ../lib/liblifutils.a
lifinit_SOURCES= lifinit.c 
lifinit_LDADD= ../lib/liblifutils.a
lifpack_SOURCES= lifpack.c 
lifpack_LDADD= ../lib/liblifutils.a
liffix_SOURCES= liffix.c 
liffix_LDADD= ../lib/liblifutils.a
lifput_SOURCES= lifput.c 
lifput_LDADD= ../lib/liblifutils.a
textlif_SOURCES= textlif.c 
textlif_LDADD= ../lib/liblifutils.a
raw41lif_SOURCES= raw41lif.c 
raw41lif_LDADD= ../lib/liblifutils.a
lifraw_SOURCES= lifraw.c 
lifraw_LDADD= ../lib/liblifutils.a
lifilper_SOURCES= lifilper.c 
lifilper_LDADD= ../lib/liblifutils.a
lifmod_SOURCES= lifmod.c 
lifmod_LDADD= ../lib/liblifutils.a
lexcat71_SOURCES= lexcat71.c 
lexcat71_LDADD= ../lib/liblifutils.a
hx41rom_SOURCES= hx41rom.c 
hx41rom_LDADD= ../lib/liblifutils.a
lifheader_SOURCES= lifheader.c
lifheader_LDADD= ../lib/liblifutils.a
lifversion_SOURCES= lifversion.c
